# QPARC-Challenge-2022

./: Pipfile  README.md  Source.py  evaluation.py  measure.sh  parallel_measure.sh  pyproject.toml  single.py
.devcontainer/: Dockerfile  devcontainer.json
analysis/: plot.py
analysis/archive/: errorbar_test.py  molecular.py  plot_new.py  plot_old.py  test.py
data/: BFGS-5e7-1.txt  BFGS-5e7-3.txt  BFGS_1e7_2.txt  BFGS_1e7_3.txt  BFGS_1e7_4.txt  BFGS_1e7_5.txt  BFGS_1e8_1.txt  BFGS_1e8_2.txt  BFGS_1e8_3.txt  BFGS_1e8_4.txt  BFGS_1e8_5.txt  BFGS_2e7_2.txt  BFGS_2e7_3.txt  BFGS_2e7_4.txt  BFGS_2e7_5.txt  BFGS_3e7_1.txt  BFGS_3e7_2.txt  BFGS_3e7_3.txt  BFGS_3e7_4.txt  BFGS_3e7_5.txt  BFGS_4e7_1.txt  BFGS_4e7_2.txt  BFGS_4e7_3.txt  BFGS_4e7_4.txt  BFGS_4e7_5.txt  BFGS_5e7_2.txt  BFGS_5e7_3.txt  BFGS_5e7_4.txt  BFGS_5e7_5.txt  BFGS_6e7_1.txt  BFGS_6e7_2.txt  BFGS_6e7_3.txt  BFGS_6e7_4.txt  BFGS_6e7_5.txt  BFGS_7e7_1.txt  BFGS_7e7_2.txt  BFGS_7e7_3.txt  BFGS_7e7_4.txt  BFGS_7e7_5.txt  BFGS_8e7_2.txt  (+148 more)
data/archive/: heat-annealing_1e7_1.txt  heat-annealing_1e7_2.txt  heat-annealing_1e7_3.txt  heat-annealing_1e7_4.txt  heat-annealing_1e7_5.txt  heat-annealing_2e7_1.txt  heat-annealing_2e7_2.txt  heat-annealing_2e7_3.txt  heat-annealing_2e7_4.txt  heat-annealing_3e7_1.txt  heat-annealing_3e7_2.txt  heat-annealing_3e7_4.txt  heat-annealing_3e7_5.txt  heat-annealing_4e7_1.txt  heat-annealing_4e7_3.txt  heat-annealing_4e7_4.txt  heat-annealing_5e7_1.txt  heat-annealing_5e7_4.txt  (+6 more)
qparcchallenge2022/: WATLE.py  __init__.py  executor.py  library.py  qparc.py  utils.py
(+80 files in other folders)
